--- a/Appointment/bin/AndroidManifest.xml
+++ b/Appointment/bin/AndroidManifest.xml
@@ -27,6 +27,10 @@
         <activity android:name ="com.appointment.SignUp"
             android:label="@string/app_name" />
            <activity android:name ="com.appointment.Profile"
+            android:label="@string/app_name" />
+             <activity android:name ="com.appointment.ProviderSignupProfile"
+            android:label="@string/app_name" />  
+             <activity android:name ="com.appointment.OrgSignupProfile"
             android:label="@string/app_name" /> 
        
     </application>
